--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,13 @@
             <artifactId>hanlp</artifactId>
             <version>portable-1.7.1</version>
         </dependency>
+
+            <dependency>
+                <groupId>org.apdplat</groupId>
+                <artifactId>word</artifactId>
+                <version>1.3.1</version>
+            </dependency>
+
     </dependencies>
 
     <build>
