--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,13 @@
                 <artifactId>word</artifactId>
                 <version>1.3.1</version>
             </dependency>
-
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>26.0-jre</version>
+            <!-- or, for Android: -->
+            <!--<version>27.0.1-android</version>-->
+        </dependency>
     </dependencies>
 
     <build>
